Fixed the fix of background text vertical alignement on images

--- a/adeoweb/src/Styles/homepagebody.module.scss
+++ b/adeoweb/src/Styles/homepagebody.module.scss
@@ -53,14 +53,18 @@
   }
 }
 .backgroundText {
+  display: flex;
   position: absolute;
   bottom: 0;
   width: 100%;
   height: 30%;
   background: rgba(215, 215, 215, 0.8);
   padding: 2% 2%;
-  font-size: 30px;
-  font-weight: 900;
+  .text {
+    align-self: center;
+    font-size: 30px;
+    font-weight: 900;
+  }
 }
 
 img {
@@ -104,8 +108,5 @@ img {
       grid-row-start: 5;
       grid-row-end: 6;
     }
-  }
-  .backgroundText {
-    padding: 7% 2%;
   }
 }
